# rust-axum-seaorm-sample

./: .env.example  Cargo.toml  README.md
local/api/: Dockerfile
local/db/: Dockerfile
openapi/: openapi.yaml
openapi/paths/users/: _id.yaml
openapi/schemas/: index.yaml  user.yaml
src/: bootstrap.rs  domain.rs  main.rs  repository.rs  router.rs  usecase.rs
src/bootstrap/: cors.rs
src/delivery/: http.rs
src/delivery/http/: handler.rs  viewmodel.rs
src/delivery/http/handler/: response.rs  root_handler.rs  user.rs  user_handler.rs
src/delivery/http/viewmodel/: user_viewmodel.rs
src/domain/: model.rs  post_domain.rs  user.rs  user_domain.rs
src/domain/model/: post_model.rs  user_model.rs
src/repository/db/: postgres.rs
src/repository/db/postgres/: post_postgres.rs  user_postgres.rs
src/test/: fixture.rs  mock.rs
src/test/fixture/: user_fixture.rs
src/test/mock/: handler_mock.rs  usecase_mock.rs
src/usecase/: post_usecase.rs  user.rs  user_usecase.rs
