[package]
name = "rust-axum-seaorm-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5"}
axum-macros = "0.2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["cors"] }
dotenv = "0.15.0"
sea-orm = { version = "^0.8.0", features = [
  "debug-print",
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros"
]}
anyhow = "1.0.58"
thiserror = "1.0.31"
mockall = "0.11.1"
uuid = "1.1.2"
validator = { version = "0.15", features = ["derive"] }
